Add Pdf download

--- a/src/App.scss
+++ b/src/App.scss
@@ -7,3 +7,26 @@ h6 {
   margin-top: 0px;
   margin-bottom: 0px;
 }
+
+a:link {
+  text-decoration: none;
+}
+
+
+a:visited {
+  text-decoration: none;
+}
+
+
+a:hover {
+  text-decoration: none;
+}
+
+
+a:active {
+  text-decoration: none;
+}
+
+.App {
+  height: 100vh;
+}
